kubernetes/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-front
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: app-front
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 8000
      nodePort: 31080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-front-deployment
  namespace: ingress-nginx
  labels:
    app: app-front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      name: app-front
      labels:
        app: app-front
    spec:
      containers:
        - name: app-front
          image: registrywadouxmorin.azurecr.io/flask-app:latest
          ports:
            - containerPort: 8000
