kubernetes/redis.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-nginx
  name: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: ingress-nginx
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          volumeMounts:
            - name: counter-pv-storage
              mountPath: /data/redis
      volumes:
        - name: counter-pv-storage
          persistentVolumeClaim:
            claimName: counter-pv-claim
